--- a/client/package.json
+++ b/client/package.json
@@ -18,5 +18,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "sass": "^1.57.1",
+    "tailwindcss": "^3.2.4"
   }
 }
