--- a/server/package.json
+++ b/server/package.json
@@ -5,24 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"npx tsc --watch\" \"nodemon -q dist/src/index.js\""
+    "start": "concurrently \"npx tsc --watch\" \"nodemon -q ./dist/index.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.15",
-    "@types/mongoose": "^5.11.97",
+    "@types/uuid": "^9.0.0",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
-    "prisma": "^4.8.1",
+    "prisma": "^4.9.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.8.1",
+    "@prisma/client": "^4.9.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^4.13.0",
-    "mongoose": "^6.8.3"
+    "uuid": "^9.0.0"
   }
 }
