--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "axios": "^1.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
