--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/uuid": "^9.0.0",
     "concurrently": "^7.6.0",
@@ -21,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "axios": "^1.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
