--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.0.3",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.13",
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.4"
